testdata/baselines/reference/submodule/conformance/iterableArrayPattern16.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
iterableArrayPattern16.ts(1,17): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
iterableArrayPattern16.ts(1,18): error TS2339: Property '0' does not exist on type '{}'.
iterableArrayPattern16.ts(1,21): error TS2339: Property '1' does not exist on type '{}'.
iterableArrayPattern16.ts(2,8): error TS2488: Type 'FooIteratorIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
iterableArrayPattern16.ts(2,12): error TS2449: Class 'FooIteratorIterator' used before its declaration.
iterableArrayPattern16.ts(13,6): error TS2304: Cannot find name 'Symbol'.
iterableArrayPattern16.ts(26,6): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== iterableArrayPattern16.ts (7 errors) ====
    function fun(...[a, b]: [Bar, Bar][]) { }
                    ~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
                     ~
!!! error TS2339: Property '0' does not exist on type '{}'.
                        ~
!!! error TS2339: Property '1' does not exist on type '{}'.
    fun(...new FooIteratorIterator);
           ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'FooIteratorIterator' must have a '[Symbol.iterator]()' method that returns an iterator.
               ~~~~~~~~~~~~~~~~~~~
!!! error TS2449: Class 'FooIteratorIterator' used before its declaration.
!!! related TS2728 iterableArrayPattern16.ts:18:7: 'FooIteratorIterator' is declared here.
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return this;
        }
    }
    
    class FooIteratorIterator {
        next() {
            return {
                value: new FooIterator,
                done: false
            };
        }
    
        [Symbol.iterator]() {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return this;
        }
    }